<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:text="@string/login_title_1"
            android:textColor="@color/cap_one_blue"
            android:textSize="@dimen/title_text_size_2"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_title_2"
            android:textColor="@color/cap_one_red"
            android:textSize="@dimen/title_text_size_1"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/login_title_sub_1"
            android:textColor="@color/cap_one_blue"
            android:textSize="16sp"/>

    <TextView
            android:id="@+id/tv_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/cap_one_red"
            android:textSize="@dimen/title_sub_size_1"/>

</LinearLayout>