<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_padding"
        android:layout_marginRight="@dimen/default_padding"
        android:layout_marginTop="@dimen/default_mini_padding"
        android:layout_marginBottom="@dimen/default_mini_padding">


    <LinearLayout
            android:paddingLeft="@dimen/default_padding"
            android:paddingRight="@dimen/default_padding"
            android:paddingTop="@dimen/default_padding"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:text="@string/what_to_expect"
                android:textColor="@color/medium_black"
                android:textSize="@dimen/text_size_medium_material"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <View
                android:layout_width="@dimen/list_avatar_width"
                android:layout_height="@dimen/underline_height"
                android:layout_marginTop="@dimen/default_micro_padding"
                android:background="@color/pink"
                android:layout_gravity="center_horizontal"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/default_padding"
                android:orientation="horizontal">

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                <ImageView
                        android:src="@drawable/ic_learn"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:text="@string/learn"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:paddingTop="@dimen/default_micro_padding"
                        android:paddingRight="@dimen/default_micro_padding"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </LinearLayout>
            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                <ImageView
                        android:src="@drawable/ic_meet"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:text="@string/meet"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:paddingTop="@dimen/default_micro_padding"
                        android:paddingLeft="@dimen/default_micro_padding"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/default_padding"
                android:orientation="horizontal">

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                <ImageView
                        android:src="@drawable/ic_food_round"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:text="@string/eat"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:paddingTop="@dimen/default_micro_padding"
                        android:paddingRight="@dimen/default_micro_padding"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </LinearLayout>
            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                <ImageView
                        android:src="@drawable/swag"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:text="@string/swag"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:paddingTop="@dimen/default_micro_padding"
                        android:paddingLeft="@dimen/default_micro_padding"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>
        <ImageView
                android:paddingTop="@dimen/default_padding"
                android:src="@drawable/ic_kick_off"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:text="@string/kick_off"
                android:padding="@dimen/default_micro_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <TextView
                android:text="@string/developer_note"
                android:paddingTop="@dimen/default_padding"
                android:paddingBottom="@dimen/default_padding"
                android:textColor="@color/medium_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <Button
                android:id="@+id/btn_code_of_conduct"
                android:text="@string/code_of_conduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/pink"
                android:padding="@dimen/default_mini_padding"
                android:minHeight="@dimen/touch_target_size"
                style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>

</android.support.v7.widget.CardView>