<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/default_mini_padding"
    android:layout_marginLeft="@dimen/default_padding"
    android:layout_marginRight="@dimen/default_padding"
    android:layout_marginTop="@dimen/default_mini_padding">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/mclean" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/default_padding"
            android:paddingRight="@dimen/default_padding"
            android:paddingTop="@dimen/default_padding"
            android:text="@string/location"
            android:textColor="@color/medium_black"
            android:textSize="@dimen/text_size_headline_material" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/default_padding"
            android:paddingLeft="@dimen/default_padding"
            android:paddingRight="@dimen/default_padding"
            android:paddingTop="@dimen/default_mini_padding"
            android:text="@string/event_location"
            android:textSize="@dimen/text_size_subhead_material" />

        <Button
            android:id="@+id/btn_get_directions"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/touch_target_size"
            android:padding="@dimen/default_mini_padding"
            android:text="@string/get_directions"
            android:textColor="@color/pink" />

    </LinearLayout>
</android.support.v7.widget.CardView>