<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_padding"
        android:layout_marginRight="@dimen/default_padding"
        android:layout_marginTop="@dimen/default_mini_padding"
        android:layout_marginBottom="@dimen/default_mini_padding">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/default_padding"
            android:orientation="vertical">

        <TextView
                android:text="@string/contact"
                android:gravity="center_horizontal"
                android:textSize="@dimen/text_size_headline_material"
                android:textColor="@color/medium_black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <View
                android:layout_width="@dimen/list_avatar_width"
                android:layout_height="@dimen/underline_height"
                android:layout_marginTop="@dimen/default_micro_padding"
                android:paddingBottom="@dimen/default_mini_padding"
                android:background="@color/pink"
                android:layout_gravity="center_horizontal"/>

        <TextView
                android:text="@string/email_title"
                android:gravity="center_horizontal"
                android:paddingTop="@dimen/default_padding"
                android:textSize="@dimen/text_size_title_material"
                android:textColor="@color/medium_black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <Button
                android:id="@+id/btn_email"
                android:text="@string/email_address"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/pink"
                android:minHeight="@dimen/touch_target_size"
                style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>
</android.support.v7.widget.CardView>