<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding"
        android:layout_marginLeft="@dimen/default_padding"
        android:layout_marginRight="@dimen/default_padding"
        android:layout_marginBottom="@dimen/default_mini_padding">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/default_padding">

        <ImageView
                android:id="@+id/iv_icon"
                android:src="@drawable/ic_launcher"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"/>

        <LinearLayout
                android:id="@+id/container_title"
                android:layout_below="@+id/iv_icon"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/default_padding">
            <TextView
                    android:id="@+id/tv_heading_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size_medium_material"
                    android:textColor="?attr/colorPrimary"
                    android:text="@string/text_android"/>
            <TextView
                    android:id="@+id/tv_heading_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="@dimen/text_size_medium_material"
                    android:text="@string/summit"/>
        </LinearLayout>

        <TextView
                android:id="@+id/tv_subheading"
                android:layout_below="@id/container_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="fill_horizontal"
                android:textSize="@dimen/text_size_subhead_material"
                android:textColor="@color/medium_black"
                android:text="@string/what_is_android_summit"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_subheading"
                android:paddingTop="@dimen/default_padding"
                android:gravity="center"
                android:orientation="horizontal">
            <ImageView
                    android:id="@+id/iv_twitter_icon"
                    android:src="@drawable/ic_twitter_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <Button
                    android:layout_toRightOf="@id/iv_twitter_icon"
                    android:id="@+id/btn_twitter"
                    android:text="@string/twitter_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/pink"
                    android:textAllCaps="false"
                    android:padding="@dimen/default_mini_padding"
                    android:minHeight="@dimen/touch_target_size"
                    style="?android:attr/borderlessButtonStyle"/>

        </LinearLayout>


    </RelativeLayout>

</android.support.v7.widget.CardView>